Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-7408

[C++] Reference benchmarks fail compiling

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.16.0
    • C++

    Description

      ../src/arrow/util/compression_benchmark.cc:72:23: warning: 'MakeCompressor' is deprecated: Use Result-returning version [-Wdeprecated-declarations]
        ABORT_NOT_OK(codec->MakeCompressor(&compressor));
                            ^
      ../src/arrow/util/compression.h:189:3: note: 'MakeCompressor' has been explicitly marked deprecated here
        ARROW_DEPRECATED("Use Result-returning version")
        ^
      ../src/arrow/util/macros.h:96:48: note: expanded from macro 'ARROW_DEPRECATED'
      #  define ARROW_DEPRECATED(...) __attribute__((deprecated(__VA_ARGS__)))
                                                     ^
      ../src/arrow/util/compression_benchmark.cc:83:61: error: too many arguments to function call, expected 4, have 6
                                            output_buffer.data(), &bytes_read, &bytes_written));
                                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      ../src/arrow/testing/gtest_util.h:108:18: note: expanded from macro 'ABORT_NOT_OK'
          auto _res = (expr);                                             \
                       ^~~~
      ../src/arrow/util/compression.h:62:3: note: 'Compress' declared here
        virtual Result<CompressResult> Compress(int64_t input_len, const uint8_t* input,
        ^
      ../src/arrow/util/compression_benchmark.cc:101:34: error: too many arguments to function call, expected 2, have 4
                                       &bytes_written, &should_retry));
                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      ../src/arrow/testing/gtest_util.h:108:18: note: expanded from macro 'ABORT_NOT_OK'
          auto _res = (expr);                                             \
                       ^~~~
      ../src/arrow/util/compression.h:77:3: note: 'End' declared here
        virtual Result<EndResult> End(int64_t output_len, uint8_t* output) = 0;
        ^
      ../src/arrow/util/compression_benchmark.cc:121:45: error: variable 'codec' declared with deduced type 'auto' cannot appear in its own initializer
        auto codec = *Codec::Create(compression, &codec);
                                                  ^
      ../src/arrow/util/compression_benchmark.cc:143:23: warning: 'Create' is deprecated: Use Result-returning version [-Wdeprecated-declarations]
        ABORT_NOT_OK(Codec::Create(compression, &codec));
                            ^
      ../src/arrow/util/compression.h:170:3: note: 'Create' has been explicitly marked deprecated here
        ARROW_DEPRECATED("Use Result-returning version")
        ^
      ../src/arrow/util/macros.h:96:48: note: expanded from macro 'ARROW_DEPRECATED'
      #  define ARROW_DEPRECATED(...) __attribute__((deprecated(__VA_ARGS__)))
                                                     ^
      ../src/arrow/util/compression_benchmark.cc:152:25: warning: 'MakeDecompressor' is deprecated: Use Result-returning version [-Wdeprecated-declarations]
          ABORT_NOT_OK(codec->MakeDecompressor(&decompressor));
                              ^
      ../src/arrow/util/compression.h:193:3: note: 'MakeDecompressor' has been explicitly marked deprecated here
        ARROW_DEPRECATED("Use Result-returning version")
        ^
      ../src/arrow/util/macros.h:96:48: note: expanded from macro 'ARROW_DEPRECATED'
      #  define ARROW_DEPRECATED(...) __attribute__((deprecated(__VA_ARGS__)))
                                                     ^
      ../src/arrow/util/compression_benchmark.cc:163:67: error: too many arguments to function call, expected 4, have 7
                                                  output_buffer.data(), &bytes_read,
                                                                        ^~~~~~~~~~~~
      ../src/arrow/testing/gtest_util.h:108:18: note: expanded from macro 'ABORT_NOT_OK'
          auto _res = (expr);                                             \
                       ^~~~
      ../src/arrow/util/compression.h:99:3: note: 'Decompress' declared here
        virtual Result<DecompressResult> Decompress(int64_t input_len, const uint8_t* input,
        ^
      3 warnings and 4 errors generated.
      

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 0.5h
                  0.5h