ARROW-7408: [C++] Fix compilation of reference benchmarks